--- a/Auth-Service/templates/accueil.html
+++ b/Auth-Service/templates/accueil.html
@@ -74,7 +74,7 @@
 
         <!-- Gestion des Patients -->
         <div class="feature-card bg-white p-8 rounded-2xl shadow-lg text-center hover:scale-105 transition cursor-pointer"
-             onclick="window.location.href='http://localhost:5001'">
+             onclick="window.location.href='http://patients'">
             <div class="text-4xl mb-4">👩‍⚕️</div>
             <h3 class="text-2xl font-bold mb-2">Gestion des patients</h3>
             <p class="text-gray-600">Accédez à toutes les informations importantes sur vos patients rapidement.</p>
